# msquic

./: CMakeLists.txt
scripts/: regressions.ps1
src/core/: binding.c  connection.c  connection.h  core.kernel.vcxproj  crypto.c  crypto_tls.c  frame.c  injection.c  inline.c  library.c  listener.c  lookup.c  loss_detection.c  operation.c  packet.c  packet_builder.c  send.c  sent_packet_metadata.c  stream_send.c  stream_set.c
src/inc/: msquic.h  quic_platform.h  quic_platform_linux.h
src/platform/: CMakeLists.txt  datapath_linux.c  datapath_winkernel.c  datapath_winuser.c  hashtable.c  platform.kernel.vcxproj  platform_internal.h  platform_linux.c  platform_winuser.c  storage_winkernel.c  tls_openssl.c  tls_schannel.c  tls_stub.c
src/regression/: CMakeLists.txt  TestResults.h  connections.cpp  loopback.cpp  quic_regression_gtest.cpp
src/test/lib/: DataTest.cpp  HandshakeTest.cpp  TestHelpers.h  testlib.kernel.vcxproj
